--- a/app/content/settings/manifest.json
+++ b/app/content/settings/manifest.json
@@ -1,7 +1,7 @@
 {
-  "name": "Bluise",
-  "shortName": "Bluise",
-  "description": "A Nuxt.js & Netlify CMS boilerplate.",
+  "name": "Grapple Comps",
+  "shortName": "Join The Fight",
+  "description": "Your one-stop shop for local jiu jitsu comps",
   "themeColor": "#0b3765",
   "backgroundColor": "#ffffff",
   "lang": "en"
